--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
       - uses: actions/checkout@v1
       - name: npm install
         run: npm install
+      - name: npm build
+        run: npm run build
       - name: test
         run: npm run test
 
